/* Vikingopkumst */ Sassisk gevööl der in

--- a/Vikings.mw
+++ b/Vikings.mw
@@ -84,9 +84,9 @@ De Vikingen seilden oaver et grötste deel van den [[Atlantische Ozeoan|Noordatl
 
 Der wörd völle diskussieerd wårumme de Vikingen sou uutbreiden deaden. Eyne van de meystgebruukte annames is dat [[Koarel n Grootn|Koarel den Grouten]] "kracht en terröör gebröäk üm alle heidenen te [[Kristendom|kerstenen]]", wat leiden töt "döypen, bekeyring of doud döär yser en blood", en dårümme "wulden de Vikingen en andere heidenen wraak neamen".<ref>Rudolf Simek, "the emergence of the viking age: circumstances and conditions", "The vikings first Europeans VIII - XI century - the new discoveries of archaeology", other, 2005, p. 24-25</ref><ref>Bruno Dumézil, master of Conference at Paris X-Nanterre, Normalien, aggregated history, author of conversion and freedom in the barbarian kingdoms. 5Th - 8th centuries (Fayard, 2005)</ref><ref>"Franques Royal Annals" cited in Peter Sawyer, "The Oxford Illustrated History of the Vikings", 2001, p. 20</ref><ref>Dictionnaire d'histoire de France - Perrin - Alain Decaux and André Castelot - 1981 - pages 184/185 ISBN 2-7242-3080-9</ref><ref>"the Vikings" R.Boyer history, myths, dictionary, Robert Laffont several 2008, p96 ISBN 978-2-221-10631-0</ref> Professor Rudolf Simek bevästigt dat "et gin toval is dat de Vikingen gangs güngen under de heyrskappye van Koarel den Grouten".<ref>. Rudolf Simek, "the emergence of the viking age: circumstances and conditions", "The vikings first Europeans VIII - XI century - the new discoveries of archaeology", other, 2005, p. 24-25</ref><ref>[[François-Xavier Dillmann]], "Viking civilisation and culture. A bibliography of French-language ", Caen, Centre for research on the countries of the North and Northwest, University of Caen, 1975, p.19, and" Les Vikings - the Scandinavian and European 800-1200 ", 22nd exhibition of art from the Council of Europe, 1992, p. 26</ref> Et kristendom sorgden in Noorweagen sowat ne eywe lang vöär verdeyldheid.<ref>"History of the Kings of Norway" by Snorri Sturlusson translated by Professor of History François-Xavier Dillmann, Gallimard ISBN 2-07-073211-8 pages 15,16,18,24,33,34,38</ref>
 
-Ne andere vöäle höyrde teory is dat et inwoanertal van skandinavie te grout wörden was vöär wat et land an eten up kunde brengen. Vöär en kustvolk med superiöre seiltechniken was et ja logisk dat se dårümme oaverseys güngen kyken, üm ny land te söken vöär et oaverskot an jungvolk. Buurderyen upsetten en land bouwklår maken was lastig in et dichtbeboste binnenland en de grund leynden sik neet best vöär landbouw. Oavervallen pleagen oaver sey was wellicht makkeliker. En groiend inwonnertal of krimpende landbouw is skoonwal nooit recht beweysen.
+Ne andere vöäle höyrde teory is dat et inwoanertal van skandinavie te grout wörden was vöär wat et land an eaten up kunde brengen. Vöär en küstvolk med superiöre seiltechniken was et ja logisk dat se dårümme oaverseys güngen kyken, üm ny land te söken vöär et oaverskot an jungvolk. Buurderyen upsetten en land bouwklår maken was lastig in et dichtbebuskede binnenland en de grund leynden sik neet best vöär landbouw. Oavervallen pleagen oaver sey was wellicht makkeliker. En groiend inwonnertal of krimpende landbouw is skoonwal nooit recht beweysen.
 
-Ne darde verklåring is dat de Vikingen gebruuk makeden van en swak ougenblik in de umliggende streaken. Sou warren de däänske vikingen up de höygde van de underlinge disterye binnen et ryk van Koarel den Grouten rund et jår [[830]]. Engeland har te lyden van interne verskellen en was verholdingswys en makkelik doolwit, döärdat souvölle steaden sou kort an sey of an makkelik bevårbåre rivyren leaden. Gebrek an goodregelde teagenstand up sey van Westeuropa sorgden at Vikingskeype vry kunden vråren en gån wåras se wulden, en plünderen en anvallen as see de kans saggen.
+Ne darde verklåring is dat de Vikingen gebruuk makeden van en swak ougenblik in de umliggende streaken. Sou warren de däänske vikingen up de höygde van de underlinge disterye binnen et ryk van Koarel den Grouten rund et jår [[830]]. Engeland had te lyden van interne verskellen en was verholdingswys en makkelik doolwit, döärdat souvölle steaden sou kort an sey of an makkelik bevårbåre rivyren leaden. Gebrek an goodregelde teagenstand up sey van Westeuropa sorgden at Vikingskeype vry kunden vråren en gån wåras se wulden, en plünderen en anvallen as see de kans saggen.
 
 Ne veerde verklåring is dat nå de val van et [[Romeinse Riek|Romeinske Ryk]] in de [[5e eeuw|5. eywe]] de handel tüsken Westeuropa en de rest van Eurasië flink achteruut gån was.<ref>Macauley Richardson, Lloyd. [http://www.hoover.org/publications/policyreview/72831997.html "Books: Eurasian Exploration"] ''Policy Review''. Hoover Institution</ref> De uutbreiding van de [[Islam]] in de [[7e eeuw|7. eywe]] dröäg dåran by.<ref>Crone, Patricia. [http://books.google.com/books?id=VWL-_hRsm2IC&dq=Islam+trade+Western+Europe+7th+century&printsec=frontcover&source=in&hl=en&ei=x3QeS57kBo7ysQPZmvX9CQ&sa=X&oi=book_result&ct=result&resnum=11&ved=0CDAQ6AEwCg#v=onepage&q=&f=false ''Meccan trade and the rise of Islam''] First Georgias Press. 2004.</ref> Der wörd bewäärd at de handel oaver de [[Middellaandse Zee|Middellandske Sey]] nog nooit sou slecht had eweasd. Döär nye handelsroutes in et arabiske en et frankiske te stichten profiteerden de vikingen van den internationalen handel.
 
@@ -96,9 +96,9 @@ In [[Neerlaand|Neaderland]] is vöäral nen anval van de Vikingen up [[Dorestad]
 In [[836]] wör [[Antwaarpn|Antwarpen]] platbrandt. Ouk warren der völle junge kearls uut [[Freeslaand|Freesland]] en de sassiske gebeden dee as sik mangs anmelden üm med te gån.<ref>[http://www.historisch-openluchtmuseum-eindhoven.nl/vikingen/vikingen-algemeen/nederland.html Historisch Openluchtmuseum Eindhoven - Vikingen in Nederland] Bekekn op 2 okt 2011</ref><ref>Jan de Vries (1923): De Wikingen in de lage landen bij de zee. Haarlem, 430 pp.</ref><ref>Annemarieke Willemsen (2004): Vikingen! Overvallen in het stroomgebied van Rijn en Maas, 800 – 1000. Utrecht, ISBN 90-6868-367-5, 191 pp.</ref>
 
 === Eande van de Vikingtyd ===
-In de Vikingtyd reisden völle skandinaviske kearls en vrouwlüde når völle deylen van Europa en vearder. Van disse kulturele diaspora sint oaverblyvsels te vinden van [[Newfoundland]] töt [[Byzantium|Bysantium]]. Disse reisetyd har skoonwal ouk völle invlood up de achterblyvers in skandinavie, dee as underwyl völle metmakeden.<ref>Roesdahl, pp. 295-7</ref> In de 300 jår van de Vikingtyd veranderen der in Skandinavië self onmündig völle wat kultuur angeyt. 
+In de Vikingtyd reisden völle skandinaviske kearls en vrouwlüde når völle deylen van Europa en vearder. Van disse kulturele diaspora sint oaverblyvsels te vinden van [[Newfoundland]] töt [[Byzantium|Bysantium]]. Disse reisetyd had skoonwal ouk völle invlood up de achterblyvers in skandinavie, dee as underwyl völle metmakeden.<ref>Roesdahl, pp. 295-7</ref> In de 300 jår van de Vikingtyd veranderen der in Skandinavië self onmündig völle wat kultuur angeyt. 
 
-An et eande van den [[11e eeuw|11den eywe]] warren der keuninklike femilys an de macht dee as goodkuring hadden van de [[Rooms-Katholieke Karke|Rooms-Katholyke Karke]], en dee regearden med aal starkeren hand. De dree keuninkryken [[Denemaarken|Dänemarken]], [[Noorweagn|Noorwea]]<nowiki/>gen en sweyden warren ontstån. der onstünden steaden dee as woarken as sekulyre en geestelike administratyve middelpeunten en moarktplekn, en der onstünden [[ekonomie|ekonomyn]] baseerd up [[geld|geeld]], når [[Groot-Brittanje|Brits]] en [[Duutslaand|Duuts]] model.<ref>Gareth Williams, 'Kingship, Christianity and coinage: monetary and political perspectives on silver economy in the Viking Age', in ''Silver Economy in the Viking Age'', ed. James Graham-Campbell and Gareth WIlliams, pp. 177-214; ISBN 978-1-59874-222-0</ref> teagen disse tyd was der al mear as den eywe gin silver mear uut de Islamitiske landen kümmen, en et silver uut Engeland köm vanof middel-11den eywe ouk nit mear.<ref>Roesdahl, pp. 296</ref> et kristendom har in Dänemarken en Noorweagen vasten grund kreagen döär de kumst van diocessen. et Nye geleuf begun sik te organiseeren en an te dringen in sweeden. Buutnlandske koarklüde en inheemse adel hadden belang by de veardere uutwyding van et kristendom, wat in Skandinavië nit allene mear up seandingswoark baseerd was. Oolde denkwysn en leavensstylen warren an et veranderen. Et duurden skoonwal nog töt [[1103]] at et eyrste Eardsbisskopryk sticht wör in [[Lund]], in den südeliken tip van Sweyden.
+An et eande van den [[11e eeuw|11den eywe]] warren der keuninklike femilys an de macht dee as goodkuring hadden van de [[Rooms-Katholieke Karke|Rooms-Katholyke Karke]], en dee regearden med aal starkeren hand. De dree keuninkryken [[Denemaarken|Dänemarken]], [[Noorweagn|Noorwea]]<nowiki/>gen en sweyden warren ontstån. der onstünden steaden dee as woarken as sekulyre en geestelike administratyve middelpeunten en moarktplekn, en der onstünden [[ekonomie|ekonomyn]] baseerd up [[geld|geeld]], når [[Groot-Brittanje|Brits]] en [[Duutslaand|Duuts]] model.<ref>Gareth Williams, 'Kingship, Christianity and coinage: monetary and political perspectives on silver economy in the Viking Age', in ''Silver Economy in the Viking Age'', ed. James Graham-Campbell and Gareth WIlliams, pp. 177-214; ISBN 978-1-59874-222-0</ref> teagen disse tyd was der al mear as den eywe gin silver mear uut de Islamitiske landen kümmen, en et silver uut Engeland köm vanof middel-11den eywe ouk nit mear.<ref>Roesdahl, pp. 296</ref> et kristendom had in Dänemarken en Noorweagen vasten grund kreagen döär de kumst van diocessen. et Nye geleuf begun sik te organiseeren en an te dringen in sweeden. Buutnlandske koarklüde en inheemse adel hadden belang by de veardere uutwyding van et kristendom, wat in Skandinavië nit allene mear up seandingswoark baseerd was. Oolde denkwysn en leavensstylen warren an et veranderen. Et duurden skoonwal nog töt [[1103]] at et eyrste Eardsbisskopryk sticht wör in [[Lund]], in den südeliken tip van Sweyden.
 [[Bestaand:Blair A'Bhuailte and Loch Leum na Luirginn.jpg|thumb|[[Kilmuir, Skye|Blar a' Bhuailte]], Leste Vikingplek in [[Skye]]]] 
 De upname van de vrogere Skandinaviske köäningryken in de grote kulturele streum van et Europese kristendom maaken at de Skandinaviske hearsers en seevearders andere belangen kreegn, en öare betrekkings med öare nåbers wysigen. Eyne van de höyvdwellen van de Vikingen was [[Slawerieje|slavendryven]]. De middeleywske karke nöm de stelling dat Kristenen nooit medekristenen as slaaf mochen hebn, wårdöär't lyfslawerye minder wör in Noord Europa. Hyrdöär was der minder te verdeenn an de oavervallen, mär of en to wörden der in den 11den eywe nog slaaven maakt. uuteindelik wör rechte slawerye verböaden, en vervöngen döär dynstknechtskop as leegste klasse in de middeleywske måtskoppye. Skandinaviske plundering in Kristelike gebeden rundum de [[Noordzee|Noord]]<nowiki/>sey en [[Ierse zee|yrske]] sey wör beduudend minder.
 
@@ -107,37 +107,37 @@ De Noorse köäningen bleaven öare macht uutuufenen in deylen van et noorden va
 == Wåpens en oorlogsvoring ==
 Unse kennis oaver woapens en beskoarming uut de Vikingtyd is baseerd up rellatyf weinige archeologiske vündste, ofbealdingen en vöär den deel up de verhalen uut de Noordse Sages en Noordse weten dee as up wörden eskreeven in den 13den eywe.
 
-når gebruuk warren alle vrye Noordse kearls verplicht woapens te hebn, en möägen se aaltyd by sik dreagen. De woapens gavn ouk nen Viking's sosjale stoatus an: nen ryken Viking har ne kumplete uutrösting van [[helm]], [[skeeld]], [[maliënkolder]] en sweard. nen typysen ''bóndi'' (vryen man) vöchten earder med nen [[spear]] en skeeld, en völle hadden ouk meestal nen [[saks]] by sik as hulpmes. [[Pieleboge|Boa]]<nowiki/>gen wörden vake bruukt an et begin van landgevechten en up see, mär wörden vake seen as minder earvol as handwoapns. Vikingen warren bysünder in öaren tyd, umdat se [[akse]]n gebröäken as höyvdwoapen. De [[Húscarls]] (''huuskearls''), de elitelyfwacht van köäning [[Knoet|Knuut]] (en later [[Harold Godwinson|köäning Harold II]]), hadden tweehandige aksen wårmed se med gemak skeelden en metaallene helme konn döärhouwen.
+når gebruuk warren alle vrye Noordse kearls verplicht woapens te hebn, en möägen se aaltyd by sik dreagen. De woapens gavn ouk nen Viking's sosjale stoatus an: nen ryken Viking had ne kumplete uutrösting van [[helm]], [[skeeld]], [[maliënkolder]] en sweard. nen typysen ''bóndi'' (vryen man) vöchten earder med nen [[spear]] en skeeld, en völle hadden ouk meestal nen [[saks]] by sik as hulpmes. [[Pieleboge|Boa]]<nowiki/>gen wörden vake bruukt an et begin van landgevechten en up see, mär wörden vake seen as minder earvol as handwoapns. Vikingen warren bysünder in öaren tyd, umdat se [[akse]]n gebröäken as höyvdwoapen. De [[Húscarls]] (''huuskearls''), de elitelyfwacht van köäning [[Knoet|Knuut]] (en later [[Harold Godwinson|köäning Harold II]]), hadden tweehandige aksen wårmed se med gemak skeelden en metaallene helme konn döärhouwen.
 
 == Nålåtenskop ==
-=== Middeleywsk denken oaver Vikingn ===
-In [[Engelaand (regio)|Engeland]] begun de Vikingtyd bruut up den [[8 juni|8. juni]] [[793]] do as vikingen et [[klooster|klouster]] van et eiland [[Lindisfarne]] vernetigen. De verwöösting van et [[Noordumbrië|noordumbriske]] Heilige Eiland deed de köäninklike höve in heel Europa upskrikken van de vikingen. "Nooit earder wör sonne gruuweldoad seen," sea den Noordumbriaansken geleyrden [[Alkwin van Jork]]. Et beald wat der in Europa oaver de Vikingen ontstünd, wör vöär den grout gedeelte döär dissen oaverval förmd. Pas vanof [[1890]] güngen gelearden öar beald oaver de Vikingen bystellen, en sagen öar vakmanskop, technologiske veardigheeden en seemanskop.<ref>Northern Shores by Alan Palmer; p.21; ISBN 0-7195-6299-6</ref>
+=== Middeleywsk denken oaver vikingen ===
+In [[Engelaand (regio)|Engeland]] begünde de Vikingtyd up den [[8 juni|8. juni]] [[793]], do as vikingen et [[klooster|klouster]] van et eiland [[Lindisfarne]] vernetigden. De verwöösting van et [[Noordumbrië|noordumbriske]] Heilige Eiland deed de köäninklike höve in heel Europa upskrikken. "Nooit eyrder wör sou ne gruweldoad seen," seade den noordumbriaansken geleyrden [[Alkwin van Jork]]. Dissen oaverval bepålden vöär et meyrendeyl wo as der in Europa oaver de Vikingen dacht wör. Pas vanaf [[1890]] güngen gelearden öär beald oaver de Vikingen bystellen, en saggen öar vakmanskap, technologiske veardigheiden en seymanskap.<ref>Northern Shores by Alan Palmer; p.21; ISBN 0-7195-6299-6</ref>
 
-[[Noordse mythologie|Noordse mytology]], [[Noordse sage|sages]] en [[Ooldnoorse literatuur|Ooldenoorse literatuur]] beskryvt de Skandinaviske kultuur en et geleuf döär verhalen van mythologiske heelden. De vrogste oaverdracht van disse verhalen was skoonwal mundelik, en latere tekste wörden oavernömmen van Kristelike gelearden, sou as de yslanders [[Snorri Sturluson]] en [[Sæmundur fróði]], wårdöär de woarheid der van twyfelachtig is. De meeste van disse sagen wörden in ysland upskreeven, en dår bleaven de meesten ook, umdat de yslanders voordan interesseerd bleaven in Noordse literatuur en wetn.
+An de hande van verhalen oaver mytologiske helden geavt [[Noordse mythologie|noordske mytology]], [[Noordse sage|sages]] en [[Ooldnoorse literatuur|oldnoorske literatuur]] nen indruk van woas de skandinaviske kultuur en et gelöyv in mekander stöäken. Disse verhalen wörden oorsprungelik mundelik döäregeaven. Latere -kristelike- gelearden as de yslanders [[Snorri Sturluson]] en [[Sæmundur fróði]] skreaven se up, wårdöär de wårheid der van twyfelachtig is. De meyste van disse sagen wörden in Ysland upskreaven en dår bleaven de meysten ook, ümdat de yslanders voordan interesseerd bleaven in noordske literatuur en wetten.
 
-De 200-jöarige Vikinginvlood up de Europese geskydenisse is völle plunder en kolonisaty, en et grötste deel van disse beskryvings kümmen van westerse getuugen en öare ofstammelingen. Minder gebruukelik, mär eavengood van topassing sint de Vikingkroniken dee as uut et ousten kümmen, sou as de [[Nestor de Kroniekskriewer|Kroniken van Nestor]], [[Kroniekn van Novgorod|Novogorod]], [[Ibn Fadlan|Ibben Fadlan]], [[Ibn Rusta|Ibben Rusta]] en völle korte berichten van den [[Fosio]]-[[bisskop]] oaver den eyrsten grouten anval up et [[Byzantiense Riek|Bysantynse Ryk]].
+De 200-jöarige vikingtyd wör vöär Europa vöäral kenmarked döär plünder en kolonisaty. Et grötste deyl van de beskryvings oaver de vikingen kümmen van europeeske getügen en öäre afstammelingen. Minder gebrukelik, mär eavengood van topassing sint de Vikingkroniken dee as uut et ousten kümmen: de [[Nestor de Kroniekskriewer|Kroniken van Nestor]], [[Kroniekn van Novgorod|Novogorod]], [[Ibn Fadlan|Ibben Fadlan]], [[Ibn Rusta|Ibben Rusta]] en vöäle korte beskryvingen van den [[Fosio]]-[[bisskop]], oaver den eyrsten grouten anval up et [[Byzantiense Riek|Bysantynske Ryk]].
 
-andere skryvers oaver Vikingen sint under mear [[Adam van Bremen]], den as skreef in et veerde deel van sinne ''Gesta Hammaburgensis Ecclesiae Pontificum'': "Dr is hyr völle goold (in [[Zeelaand (Denemaarkn)|seeland]]), vergoard döär piraterye. Disse piraatn, dee as döär öar eegne volk ''wichingi'' neumd wordt, en ''Ascomanni'' döär uns volk, sint undergeskikt an den däänsken köäning."
+Andere skryvers oaver Vikingen warren under meyr [[Adam van Bremen]], den as skreav in et veerde deyl van syne ''Gesta Hammaburgensis Ecclesiae Pontificum'': "Der is hyr völle goold (in [[Zeelaand (Denemaarkn)|seyland]]), vergård döär piraterye. Disse piraten, dee as döär öar eygene volk ''wichingi'' nöömd wordet, en ''Ascomanni'' döär uns volk, sint undergeskikt an den däänsken köäning."
 
 === Nåmiddeleywsk denken oaver Vikingen ===
 [[Bestaand:Vikings fight.JPG|right|thumb|n nåspöld vikinggevecht]]
 
-Vroomoderne uutgawes dee as te doon hadden med datte wa'w rechtevoort Vikingkultuur neumt, verskeenn in den [[16e eeuw|16den eywe]], sou as de ''Historia de gentibus septemtrionalibus'' (van Olaus Magnus, in [[1555]]) en de eyrste edisy van den 13de eywesen ''Gesta Danorum'' van [[Saxo Grammaticus]] in [[1514]]. De snelheid wårmed der ny materiaal uutköm nöm to duurnd den [[17e eeuw|17den eywe]] med [[Latien|Latyn]]se oaversettings van de [[Edda]] (med name Peder Resen sin ''Edda Islandorum'' uut [[1665]]).
+Vroomoderne uutgaves oaver vikingkultuur verskeynen in den [[16e eeuw|16. eywe]], sou as de ''Historia de gentibus septemtrionalibus'' (van Olaus Magnus, in [[1555]]) en de eyrste edity van den 13.-eywsken ''Gesta Danorum'' van [[Saxo Grammaticus]] in [[1514]]. Ny materiaal wör voordan rapper uutegeaven vanaf den [[17e eeuw|17. eywe]], med [[Latien|latynske]] oaversettings van de [[Edda]] (med name Peder Resen sin ''Edda Islandorum'' uut [[1665]]).
 
-In Skandinavië warren de 17de eywese [[Denemaarken|däänske]] gelearden [[Thomas Bartholin]] en [[Ole Worm]], en den sweydsken [[Olof Rudbeck]] de de eyrsten dee as [[Runes (skrift)|runes]] en yslandske sagen as historiske welen gebröäken. Duurnd de [[Verlichting]] en de [[Noordse Rennaissance]] wör historiske geleardheid in Skandinavië mear rasjoneel en erichtet up resultaat, sou as blik uut et woark van den däänsken geskydkündigen [[Ludvig Holberg|Lodewyk Holberg]] en den sweydsken [[Olof von Dalin]]. Ne belangryke vroo-britske bydreage an de Vikingstudys was de ''Linguarum vett. septentrionalium thesaurus'' van George Hicke uut [[1703]] töt [[1705]]. Duurnd den [[18e eeuw|18den eywe]] wörden onmündig völle lüde uut grout-Brittanje interesseerd in ysland en Skandinaviske kultuur, wat as gevolg har dat völle [[Ooldnoors|Ooldenoors]]e tekste oaversat wörden in et [[Engels]], en oolde gedichten dee as de sogeneumde "Vikingdeugden" bejubellen.
+In Skandinavie warren de 17.-eywske [[Denemaarken|däänske]] gelearden [[Thomas Bartholin]] en [[Ole Worm]], en den sweydsken [[Olof Rudbeck]] de eyrsten dee as [[Runes (skrift)|runes]] en yslandske sagen as historiske brunnen gebröäken. Durende de [[Verlichting]] en de [[Noordse Rennaissance|Noordske Rennaissance]] wör historiske geleardheid in Skandinavie meyr rationeel en erichted up resultaat. Dat blikt under meyr uut et wark van den däänsken geskeedkündigen [[Ludvig Holberg|Lodewyk Holberg]] en den sweydsken [[Olof von Dalin]]. Ne belangryke vroo-britske bydrage an vikingstudys was de ''Linguarum vett. septentrionalium thesaurus'' van George Hicke uut [[1703]] töt [[1705]]. Durende den [[18e eeuw|18. eywe]] rakeden onmündig vöäle lüde uut Groutbrittanie interesseerd in Ysland en skandinaviske kultuur. Vöäle [[Ooldnoors|oldnoorsk]]e tekste en olde gedichten dee as de sogeneumde ''vikingdöägden'' bejübelden, wörden oaversat in et [[Engels|engelsk]].
 
-t Woard "Viking" wör pas vanof et begin van den [[19e eeuw|19den eywe]] populear maakt döär [[Erik Gustaf Geijer]] in sin gedicht ''The Viking''. Geijer sin gedicht dröäg by an et romantiseerde beald van de vikingen, wat froai weinig up geskydkündige feiten baseerd was. De vernyde interesse vanuut de [[Romantiek|Romantik]] vöär et Oolde Noorden har dootyds politike uutwoarkings. De [[Geatish Society]], wåras Geijer lid van was, mölk disse myte uut. Nen anderen sweydsken skryver den as ne grote invlood har up et beald van de Vikings was [[Esaias Tegnér]] (ook lid van de Geatish Socyty) den as ne moderne versy skreef van ''[[Friðþjófs saga ins frœkna]]'', wat onmündig populear wör in de Noordse landen, et [[Verenigd Keuninkriek|Verenigd Keuninkryk]] en [[Duutslaand|Duutsland]].
+Et woord "viking" wör pas vanaf et begin van den [[19e eeuw|19. eywe]] populäär maked döär [[Erik Gustaf Geijer]] in syn gedicht ''The Viking''. Geijer syn gedicht, wat froai weinig up geskeedkündige feiten baseerd was, heamelden de vikingen flink up. De vernyde interesse vanuut de [[Romantiek|romantik]] vöär et Olde Noorden had dootyds politike uutwarking. De [[Geatish Society]], wåras Geijer lid van was, mölk de mytes flink uut. Nen anderen sweydsken skryver den as nen grouten invlood had up et beald van de vikingen was [[Esaias Tegnér]] (ouk by Geatish Society). Den skreav ne moderne versy van ''[[Friðþjófs saga ins frœkna]]'', wat onmündig populear wör in de Noordse landen, et [[Verenigd Keuninkriek|Verenigd Köäningryk]] en [[Duutslaand|Düütskland]].
 
-De fascinasy vöär Vikingen köm an den top geduurnde de sogeneumde [[Vikingopleawing]] an et eande van den 18den en 19den eywe. In grout-Brittanje kum dit når buuten as [[Septentrionalisme]], in Duutsland as [[Richard Wagner|Wagnerians]] denken, of selfs [[Esotheriek in Duutslaand en Oostnriek|Duutse Mystik]], en in de Skandinaviske landen as [[Romanties nasjonalisme|Romantys nationalisme]] of [[Skandinavisme]]. 19de-eywese studyuutgawes oaver de Vikingtyd kreagen nen kleinn leaserskring in grout-Brittanje, archeoloogen begunn med upgreawings van et britske Vikingverleeden, en sproakleefhebbers begunn Vikingsegswysn en -wöarde te söken in (strekgebünden varianten van) et Engels. Nye wöardeböke vöär et Ooldenoors löät lüde uut de Viktorianse tyd knooin med (vöärnamelik) de [[Ieslaandse sages|yslandske sages]].<ref name="bbc">[http://www.bbc.co.uk/history/ancient/vikings/revival_01.shtml The Viking Revival Duur Professor Andrew Wawn op de] bbc</ref>
+De fascinaty vöär Vikingen küm an et höygdepünt tydens de sounöömde [[Vikingopleawing|vikingupleaving]] an et eande van den 18. en begin 19.eywe. In Groutbrittanie küm dit når buten as [[septentrionalisme]], in Düütskland as [[Richard Wagner|Wagneriaansk]] denken, of selvs [[Esotheriek in Duutslaand en Oostnriek|Düütske Mystik]], en in de Skandinaviske landen as [[Romanties nasjonalisme|romantisk nationalisme]] of [[skandinavisme]]. 19.-eywske studys oaver de vikingtyd kreagen nen leaserskring in Groutbrittanie, archeologen begünden et britske vikingverleaden up te graeven, en språkundersökers söchten spoars van vikingspråke in (streakgebünden varianten van) et engelsk. Nye wöördeböke vöär et oldnoorsk löät lüde uut de viktoriaanske tyd knoien med (vöärnamelik) de [[Ieslaandse sages|yslandske sages]].<ref name="bbc">[http://www.bbc.co.uk/history/ancient/vikings/revival_01.shtml The Viking Revival Duur Professor Andrew Wawn op de] bbc</ref>
 
-Töt vöär korten tyd was de geskydenisse van de Vikingtyd vöäral baseerd up de yslandske sages, de geskydenisse van de dänen eskreeven döär [[Saxo Grammaticus]], den [[Ruslaand|russisken]] [[Eerstn kroniek|eyrsten kronik]] en den [[Oorlog van de Iern met de Vrömden|Oorlog van de yren med de Vrömden]]. Nog mär weinig gelearden seet disse tekste as betrouwboar. De meeste geskydkündigen verlåtet sik up archeology en [[numismatiek|numismatik]], welke weardevolle bydreages hebt eleawerd an begrip oaver dee tyd.<ref>[http://books.google.com/books?id=AXzrQvv51tEC&dq The Oxford Illustrated History of the Vikings duur Peter Hayes Sawyer] ISBN 0-19-820526-0</ref>
+Töt vöär korten tyd was de geskedenisse van de vikingtyd vöäral baseerd up de yslandske sages, de däänske geskedenisse van [[Saxo Grammaticus]], den [[Ruslaand|russisken]] [[Eerstn kroniek|eyrsten kronik]] en den [[Oorlog van de Iern met de Vrömden|Oorlog van de Yren med de Vrömden]]. Noch mär weinig geleyrden seet disse tekste as betrouwbår. De meyste geskeedkündigen verlåtet sik up archeology en [[numismatiek|numismatik]], wat waerdevolle bydreages hebbet eleyverd an begrip oaver dee tyd.<ref>[http://books.google.com/books?id=AXzrQvv51tEC&dq The Oxford Illustrated History of the Vikings duur Peter Hayes Sawyer] ISBN 0-19-820526-0</ref>
 
 ==== t Beeld van de Viking in 20ste-eywese politik ====
 t Romantiseerde beald van de Vikingen wat döär gelearde en gewone kringe wör emaakt in noorwestelik Europa in den 19den en vrog-20sten eywe was stark, en et Vikingfiguur wör den bekeand en bruukbår symbool in verskillende umstandigheeden in de politik en politike ideologyn.<ref>Hall, pp. 220–1; Fitzhugh and Ward, pp. 362–64</ref> In [[Normandië]], wat döär de Vikingen was koloniseerd, wör et Vikingskip den völgebruukt regionaal symbool. In Duutsland wör de gewoarwording van Vikinggeskydenisse heugerop hulpen döär den 19de-eywes greansverskel med Deanemarken oaver [[Sleeswiek-Holstain|Sleeswyk-Holsteen]] en et gebruuk van Skandinaviske mytology döär Richard Wagner. et uphemmelde beald oaver Vikingen stünd anhangers van germaanse oaverheyrsking wal an, en se veranderen et beald van de Viking når öare weunsk van et germaanse upperras.<ref>Fitzhugh and Ward, p. 363</ref> döär de sproake en kulturele oaveringumste tüsken Noordsspreknde Skandinaviërs en andere germaanse grupen wörden Skandinaviske Vikingen in [[Naziduutslaand|Nasiduutsland]] ofbealdt as et puurste germaans. et Kulturele fenomeen van de Vikinggröai wör vannys beskouwd vöär gebruuk as propaganda üm et onmündig militante nationalisme van et [[Daarde Riek|Daarde Ryk]] te understönn. andere politike organisatys van et selfde gedachtegood, sou as de vrogere Noorske fascistiske partye [[Nasjonal Samling]], gebröäken up ne selfde wiske ellemeanten van de Moderne Vikingmythe in öare symbolyk en propaganda. In [[Kommunisme|kummunistys]] [[Ruslaand|Rusland]] leiden de ideologye van Slawiske raspuurheid töt den kumpleet oontkenn van den Skandinavys andeel in et ontstån van de [[Rusleu]], dee as volgens de kummunisten uut de Slawiske lüde ontstån warren. Bewiske vöär et teagendeel wörden töt 1990 underdrukt en achterheulden. De stad Novgorod löp rechtevoort te koop med öare Vikingsgeskydenisse en hef den Vikingskip in et stadswoapen up låten neamen.<ref>Hall, pp. 221</ref>
 
 === Vikingen in de moderne musik, skryverye en popkultuur ===
 
-Döär de upera's van den Duutsen musikskryver [[Richard Wagner]], sou as ''[[Der Ring des Nibelungen]]'', kümmen döär de Vikingen en de Romantike Vikingopleawing völle kreatyve warken up de wearld. Doarunder vaalt böke dee as rechtstreeks baseerd sint up historiske gebuurtenisse, sou as [[Frans Gunnar Bengtsson]]'s ''De Langskepe'' (den as in 1963 verfilmd wör), en historiske fantasyvoarke sou as de film ''The Vikings'' uut [[1958]], [[Michael Crichton]] sin ''Eaters of the Dead'' (Doodenetters), den as verfilmd wör as ''The 13th Warrior'' en de kumedyfilm ''Erik The Viking''. den Vampyr ''Eric Northman'' in de HBO Tv-sery ''[[True Blood]]'' was nen Vikingpreens vöär at he in vampyr wör veranderd. Vikingen kumt vöär in verskeidene böke van de däänsk-Amerikanse skryver [[Poul Anderson]], en den [[Groot-Brittanje|britsken]] verkenner, geskydkündigen en skryver [[Tim Severin]] skreef ne trilogy in 2005 oaver nen jungen Viking Thorgils Leifsson, den as üm de wearld reisden.
+Döär de upera's van den Duutsen musikskryver [[Richard Wagner]], sou as ''[[Der Ring des Nibelungen]]'', kümmen döär de Vikingen en de Romantike Vikingopleawing völle kreatyve warken up de wearld. Doarunder vaalt böke dee as rechtstreeks baseerd sint up historiske gebuurtenisse, sou as [[Frans Gunnar Bengtsson]]'s ''De Langskepe'' (den as in 1963 verfilmd wör), en historiske fantasyvoarke sou as de film ''The Vikings'' uut [[1958]], [[Michael Crichton]] sin ''Eaters of the Dead'' (Doodenetters), den as verfilmd wör as ''The 13th Warrior'' en de kumedyfilm ''Erik The Viking''. den Vampyr ''Eric Northman'' in de HBO Tv-sery ''[[True Blood]]'' was nen Vikingpreens vöär at he in vampyr wör veranderd. Vikingen kumt vöär in verskeidene böke van de däänsk-Amerikanse skryver [[Poul Anderson]], en den [[Groot-Brittanje|britsken]] verkenner, geskeedkündigen en skryver [[Tim Severin]] skreef ne trilogy in 2005 oaver nen jungen Viking Thorgils Leifsson, den as üm de wearld reisden.
 
 Sind de jåren '60 is der nen upkumst van [[histories noaspöln|historys nåspöllen]]. Skoonwal de eyrste grupen weinig te doon hadden med historiske getrouwheid, is dår in latere jåren aal mear andacht vöär kümmen. De grötste nåspölgrupen sint [[The Vikings (noaspölgroep)|The Vikings]] en [[Regia Anglorum]], mär der bestoat heel völle kleindere grupen in Europa, [[Noord-Amerika]], [[Niej Zeelaand|Ny seeland]] en [[Australi'je (land)|Australië]]. Völle van disse grupen doot med in leavensechte gevechtn, en wat hebt der selfs Vikingskepe of -bootn.
 
@@ -149,7 +149,7 @@ In 2013 wör der ne tellevisyryge uut egeeven, den as ''Vikings'' het. et Verhaa
 ==== Helms med hoorns ====
 med uutsündering van twee of dree ofbealdings van (rituele) helms - med uutsteksels dee as stileerde [[raaf|raa]]<nowiki/>ven, [[slang|slänge]] of hoorns mut vöärstelen - sint der nooit (ofbealdings van) oorlogshelme uut Vikingtyd med hoorns weadervünden. Starker nog, de gewoonlike korte-ofstand vechtstyl van de Vikingen (in skeeldwalen of up "skipeilanden") solen helms med hoorns ungemakkelik en selfs gevöarlik hebben maakt vöär den dreager.
 
-Doarumme meant geskydkündigen at Vikingkrygers nooit hoornde helms hadden, mär et is nit te bewysen of se der wal of nit ewest hebt, in gevecht, of vöär ritueellen. De misvatting van de hoornde helms köm deels döär anhangers van et 19de-eyweste [[Götiska Förbundet|Geutise Verbund]], wat in 1811 in [[Stockholm, Zweedn|Stockholm,]] sweyden wör uprichtet. sey promooten et gebruuk van Noordse mytology as et underwoarp van heugere keunst en andere ethnolgiske en morele duulen.
+Doarumme meant geskeedkündigen at Vikingkrygers nooit hoornde helms hadden, mär et is nit te bewysen of se der wal of nit ewest hebt, in gevecht, of vöär ritueellen. De misvatting van de hoornde helms köm deels döär anhangers van et 19de-eyweste [[Götiska Förbundet|Geutise Verbund]], wat in 1811 in [[Stockholm, Zweedn|Stockholm,]] sweyden wör uprichtet. sey promooten et gebruuk van Noordse mytology as et underwoarp van heugere keunst en andere ethnolgiske en morele duulen.
 
 De Vikingen wörden vake ofbealdt med evleugelde helms en in andere kleare dee as anslöäten by bealde uut de [[Klassieke Ooldheaid|Klassike Ooldheid]], vöäral by ofbealding van de Noordse gooden. Dit wör edån üm ansluuting te söken by de lüde dee as tuundertyds nog de Klassike Ooldheid anhungn.
 
