Wysigingen döär [[Special:Contributions/145.102.244.2|145.102.244.2]] ([[User talk:145.102.244.2|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:Bdijkstra|Bdijkstra]]

--- a/Michelangelo.mw
+++ b/Michelangelo.mw
@@ -1,4 +1,4 @@
-'''Michelangelo di Lodovico Buonarroti Simoni''' ([[6 meert]] [[1475]] – [[18 febrewaori]] [[1564]]), beter bekend als '''Michelangelo''', was een Italiaansen [[Renaissance]] [[schilder]], [[beeldhouwer]], [[architekt]], [[dichter]] en [[ingenieur]]. Krek as [[Leonardo da Vinci]] wöd e wal nen "Renaissancekaerl" of "homo universalis" eneumd, wat inhöld dat e völle talent had in verskeidene gebeden.
+'''Michelangelo di Lodovico Buonarroti Simoni''' ([[6 meert]] [[1475]] – [[18 febrewaori]] [[1564]]), better bekend as '''Michelangelo''', was nen Italiaansen [[Renaissance]] [[skilder]], [[beeldhouwer]], [[architekt]], [[dichter]] en [[ingenieur]]. Krek as [[Leonardo da Vinci]] wöd e wal nen "Renaissancekaerl" of "homo universalis" eneumd, wat inhöld dat e völle talent had in verskeidene gebeden.
 
 Michelangelo hef n alderbastend drok laeven eleid, woarin e völle [[kunstwark]]en emaakt hef, ondermeer de marmeren beelden Pieta in den Sunte Pieters Basiliek en David den vrogger in [[Florence]] stond, moar noo in de Accademia Gallery. Michelangelo's bekendste skilderi-jen bunt grote freskoos (kalkskilderingen) op et plafond van de [[Sixtiense Kapelle]] en et Leste Eurdeel. Op het gebeed van bouwkunde / architektuur bunt den oostvlöggel en den koepel van de Sixtiense Kapelle bekend.
 
