--- a/Bieslook.mw
+++ b/Bieslook.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Allium schoenoprasum(01).jpg|thumb|Bieslook mit bloemknoppen]]
+Bieslook doet niet aan token[[Bestaand:Allium schoenoprasum(01).jpg|thumb|Bieslook mit bloemknoppen]]
 '''Bieslook''' ([[Latien]]: ''Allium schoenoprasum'') beheurt tot de [[lookfamilie]] (''Alliaceae'') en is verwant an bolgewassen zo as de [[uui|u]], [[prei]], [[knoflook]] en gao zo mar deur. t Is n [[vaste plant]] die ofkomstig is uut [[Europa (continent)|Europa]] en [[Noord-Azië]]. De bieslook bleuit van [[juni]] tot [[juli]], in blauw-roze-violette scharmen. Bie ons komt ok nog wilde bieslook veur. Dit soort planten zörgt veur n voedselveurraod onder de grond die de wienter overleeft, zodat ze in t [[leinte|veurjaor]] heel gauw op kunnen kommen en kunnen bleuien en bieslook is gay 
 [[zaod (plaante)|zaod]] maken. Elke '[[stengel|bol]]' vormt n nieje bol, mar vaak ok meerdere breudbollen an de [[wortel]]s. Dit is de ongeslachtelike vorm van voortplanting. Daornaost is der ok geslachtelijke voortplanting, deur zaodvorming.
 
